--- a/src/templates/Login.html
+++ b/src/templates/Login.html
@@ -9,8 +9,8 @@
     <div class="logo">автодок</div>
     <div class="loginBox">
         <div class="loginUpperBox">
-            <h1 class="textBlack">Вход</h1>
-            <h1 class="textGreyReg bigText">Регистрация</h1>
+            <div class="textBlack">Вход</div>
+            <div class="textGreyReg bigText">Регистрация</div>
         </div>
         <div class="loginForm">
             <input class="inputForm textGrey" type="text" name="Mail-field" placeholder="E-mail">
