--- a/src/templates/Login.html
+++ b/src/templates/Login.html
@@ -9,8 +9,8 @@
     <div class="logo">автодок</div>
     <div class="loginBox">
         <div class="loginUpperBox">
-            <div class="textBlack">Вход</div>
-            <div class="textGreyReg bigText">Регистрация</div>
+            <a class="textBlack" href="#">Вход</a>
+            <a class="textGreyReg bigText" href="#">Регистрация</a>
         </div>
         <div class="loginForm">
             <input class="inputForm textGrey" type="text" name="Mail-field" placeholder="E-mail">
