--- a/src/static/css/MainPage.css
+++ b/src/static/css/MainPage.css
@@ -79,3 +79,78 @@
   background: #000;
   box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.25);
 }
+
+.mainContent{
+  width: 1044px;
+  height: 395px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
+.content{
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+
+.cardDoc{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.docInf{
+  display: flex;
+  width: 320px;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-radius: 20px;
+  border-color: white;
+}
+
+.docName{
+  color: #000;
+  font-family: Montserrat;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.docPattern{
+  color: #C0C0C0;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.docDeadlines{
+  width: 80px;
+  height: 15px;
+  display: flex;
+  padding: 5px 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 100px;
+  background: #000;
+}
+
+.textDate{
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
