--- a/src/static/css/Login.css
+++ b/src/static/css/Login.css
@@ -42,6 +42,20 @@
     gap: 25px;
     background: #FFFFFF;
   }
+  .registrationBox{
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    text-align: center;
+    width: 521px;
+    height: 475px;
+    margin: auto;
+    top: 0; left: 0; bottom: 0; right: 0;
+    gap: 25px;
+    background: #FFFFFF;
+  }
   .loginUpperBox{
     display: flex;
     flex-direction: row;
